manifests/udns-with-pods/overlapping-with-blue-udn.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: overlapping-with-blue
  labels:
    name: overlapping-with-blue
    k8s.ovn.org/primary-user-defined-network: ""
    purpose: devconf-eu-2025-demo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app-overlapping-blue
  namespace: overlapping-with-blue
  labels:
    network: overlapping-with-blue
    purpose: devconf-eu-2025-demo
spec:
  selector:
    matchLabels:
        network: overlapping-with-blue
        purpose: devconf-eu-2025-demo
  replicas: 2
  template:
    metadata:
      labels:
        network: overlapping-with-blue
        purpose: devconf-eu-2025-demo
    spec:
      containers:
      - args:
        - netexec
        image: k8s.gcr.io/e2e-test-images/agnhost:2.45
        imagePullPolicy: IfNotPresent
        name: agnhost-container
